--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
 	"author": "Elyan",
 	"license": "ISC",
 	"devDependencies": {
+		"@babel/preset-env": "^7.15.4",
+		"babel-core": "^6.26.3",
+		"babel-loader": "^8.2.2",
+		"babel-preset-env": "^1.7.0",
 		"eslint": "^7.32.0",
 		"hint": "^6.1.4",
 		"html-webpack-plugin": "^5.3.2",
@@ -23,6 +27,7 @@
 		"webpack-dev-server": "^4.1.1"
 	},
 	"dependencies": {
+		"babel-polyfill": "^6.26.0",
 		"jquery": "^3.6.0",
 		"nodemon": "^2.0.12"
 	}
