--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"webpack-dev-server": "^4.1.1"
 	},
 	"dependencies": {
+		"axios": "^0.21.4",
 		"babel-polyfill": "^6.26.0",
 		"jquery": "^3.6.0",
 		"nodemon": "^2.0.12"
