--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"axios": "^0.21.4",
 		"babel-polyfill": "^6.26.0",
+		"fractional": "^1.0.0",
 		"jquery": "^3.6.0",
 		"nodemon": "^2.0.12"
 	}
