update webpack config file and package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"author": "Elyan",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/preset-env": "^7.15.4",
+		"@babel/preset-env": "^7.15.8",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.2.2",
 		"babel-preset-env": "^1.7.0",
@@ -31,6 +31,8 @@
 		"babel-polyfill": "^6.26.0",
 		"fractional": "^1.0.0",
 		"jquery": "^3.6.0",
-		"nodemon": "^2.0.12"
+		"jshint": "^2.13.1",
+		"nodemon": "^2.0.12",
+		"uniqid": "^5.4.0"
 	}
 }
